removed job title margin to prevent text wrapping

--- a/style sheet.css
+++ b/style sheet.css
@@ -1094,10 +1094,6 @@ footer > div{
 
 @media (pointer: fine) {
 
-    .projectCarousel {
-        overflow-x: hidden;
-    }
-
     #profile-section {
         height: 70vh;
     }
